hero containers are aligned to their correct side

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     align-items: center;
     background-color: #1F2937;
     display: flex;
-    height: 7vh;
+    height: 10vh;
     justify-content: space-between;
     padding: 10px;
 }
@@ -38,7 +38,7 @@
 .hero {
     background-color: #1F2937;
     display: flex;
-    height: 100vh;
+    height: 75vh;
     justify-content: space-evenly;
 }
 
@@ -51,19 +51,33 @@
 .hero-p {
     color: #E5E7EB;
     font-size: 18px;
-    
+    margin: 10px 0 10px 0;
 }
 
 .hero-btn {
     color: #F9FAF8;
     background-color: #3882F6;
     border: 5px solid #3882F6;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 5px 20px;
+    width: 150px;
 }
 
 .hero-img {
     height: auto;
     max-width: 100%;
     width: 600px;
+}
+
+.hero-img-container {
+    display: flex;
+    margin: auto;
+}
+
+.CTA-container {
+    align-items: flex-start;
+    display: flex;
+    flex-flow: column nowrap;
+    margin: auto;
+    width: 33%;
 }
